--- a/ansible/roles/db/files/my.cnf
+++ b/ansible/roles/db/files/my.cnf
@@ -2,3 +2,9 @@
 !includedir /etc/mysql/mysql.conf.d/
 [mysqld]
 bind-address = 0.0.0.0
+#log_slow_queries = /var/log/mysql/mysql-slow.log
+#long_query_time = 1
+#general_log_file = /var/log/mysql/mysql.log
+#general_log = 1
+log_error = /var/log/mysql/error.log
+log_error_verbosity = 2
