--- a/ansible/roles/db/handlers/main.yml
+++ b/ansible/roles/db/handlers/main.yml
@@ -3,5 +3,10 @@
     service:
       name: mysql
       state: restarted
-    become: yes
+    become: true
 
+  - name: restart filebeat
+    service:
+      name: filebeat
+      state: restarted
+    become: true
