--- a/ansible/roles/web/tasks/main.yml
+++ b/ansible/roles/web/tasks/main.yml
@@ -1,23 +1,68 @@
 - name: 1. Install Nginx
-  apt: name=nginx state=present
-  become: yes
+  apt: 
+    name: nginx
+    state: present
+  become: true
 
 - name: 2. Install php-fpm
-  apt: name=php-fpm update_cache=yes state=present
-  become: yes
+  apt: 
+    name: php-fpm 
+    update_cache: yes
+    state: present
+  become: true
 
 - name: 3. Install php-mysql
-  apt: name=php7.2-mysql update_cache=yes state=present
-  become: yes
+  apt: 
+    name: php7.2-mysql 
+    update_cache: yes
+    state: present
+  become: true
 
 - name: 4. Configure nginx
-  copy: src=./files/default dest=/etc/nginx/sites-enabled/default owner=root group=root mode=644
+  copy: 
+    src: ./files/default
+    dest: /etc/nginx/sites-enabled/default 
+    owner: root 
+    group: root
+    mode: 644
   notify:
     - restart nginx
-  become: yes
+  become: true
 
 - name: 5. Configure php-fpm
-  copy: src=./files/www.conf dest=/etc/php/7.2/fpm/pool.d/www.conf owner=root group=root mode=644
+  copy: 
+    src: ./files/www.conf
+    dest: /etc/php/7.2/fpm/pool.d/www.conf
+    owner: root
+    group: root
+    mode: 644
   notify:
     - restart php-fpm
-  become: yes
+  become: true
+
+- name: 6. Add elastic apt key
+  apt_key:
+    url: https://artifacts.elastic.co/GPG-KEY-elasticsearch
+    state: present
+    validate_certs: false
+  become: true
+
+- name: 7. Add elastic repository
+  apt_repository:
+    repo: deb https://artifacts.elastic.co/packages/7.x/apt stable main
+    state: present
+  become: true
+
+- name: 8. Install filebeat
+  apt: 
+    name: filebeat
+    state: present
+  notify: restart filebeat
+  become: true
+
+- name: 9. Configure filebeat
+  copy:
+    src: ./files/filebeat.yml
+    dest: /etc/filebeat/filebeat.yml
+  notify: restart filebeat
+  become: true
